--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -19,7 +19,7 @@
                     <div class="navbar-logo">Data<strong>Base</strong></div>
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}">Inicio</a></li>
-                        <li class="opciones"><a href="{% url 'dashboard' %}">Contenido</a></li>
+                        <li class="opciones"><a href="{% url 'exercises' %}">Contenido</a></li>
                         <li class="opciones"><a href="{% url 'compilator' %}">Herramientas</a></li>
                     </ul>		
                     <div class="navbar-profile">
