--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <div id="mid-container">
+    
         <div id="img-dashboard-container">
-            <img src="{% static 'img/code.png' %}}" alt="" class="img">
+            <img src="{% static 'img/code.png' %}" alt="" class="img">
         </div>
         <div id="right-dashboard-container">
         <div id="right-dashboard-container-top">
