--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -19,8 +19,8 @@
                     <div class="navbar-logo">Data<strong>Base</strong></div>
                     <ul class="navbar-list">
                         <li class="opciones"><a href="{% url 'dashboard' %}">Inicio</a></li>
-                        <li class="opciones"><a href="{% url 'exercises' %}">Contenido</a></li>
-                        <li class="opciones"><a href="{% url 'compilator' %}">Herramientas</a></li>
+                        <li class="opciones"><a href="{% url 'unidades' %}">Contenido</a></li>
+                        <li class="opciones"><a href="{% url 'compilador' %}">Herramientas</a></li>
                     </ul>		
                     <div class="navbar-profile">
                         <div class="navbar-notification">
@@ -29,7 +29,10 @@
                         </div>
                         <div class="navbar-notification navbar-avatar">
                             <div class="navbar-picture">
-                                <img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
+                                <a href="{% url 'perfil' %}">
+                                    <img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
+                                </a>
+                                
                             </div>
                         </div>
                     </div>
