*feat* Ejercicios  finished
Ejercicios #1, #8, #4, #3

--- a/Templates/pruebas.html
+++ b/Templates/pruebas.html
@@ -1,163 +1,196 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <head>
-        <title>Ejercicios</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/static/css/estilos.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap" rel="stylesheet"> 
-        <script src="/static/js/funcionesUriel.js"></script>
-        <script src="/static/js/jQuery.js"></script>
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <style>
-        #sortable1, #sortable2, #sortable3 { list-style-type: none; margin: 0; float: left; margin-right: 10px; background: #eee; padding: 5px; width: 143px;}
-        #sortable1 li, #sortable2 li, #sortable3 li { margin: 5px; padding: 5px; font-size: 1.2em; width: 120px; }
-        </style>
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        
-    </head>
+  <meta charset="UTF-8">
+  <title>Entity Relationship</title>
+  <meta name="description" content="Interactive entity-relationship diagram or data model diagram implemented by GoJS in JavaScript for HTML." />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Copyright 1998-2020 by Northwoods Software Corporation. -->
+
+  <script src="{% static 'js/GoJS/go.js' %}"></script>
+  <script src="{% static 'js/GoJS/Figures.js' %}"></script>
+  <script src="{% static 'js/GoJS/goSamples.js' %}"></script>
+  <script id="code">
+    function init() {
+      if (window.goSamples) goSamples();  // init for these samples -- you don't need to call this
+      var $ = go.GraphObject.make;  // for conciseness in defining templates
+
+      myDiagram =
+        $(go.Diagram, "myDiagramDiv",  // must name or refer to the DIV HTML element
+          {
+            allowDelete: false,
+            allowCopy: false,
+            layout: $(go.ForceDirectedLayout),
+            "undoManager.isEnabled": true
+          });
+
+      var colors = {
+        'red': '#be4b15',
+        'green': '#52ce60',
+        'blue': '#6ea5f8',
+        'lightred': '#fd8852',
+        'lightblue': '#afd4fe',
+        'lightgreen': '#b9e986',
+        'pink': '#faadc1',
+        'purple': '#d689ff',
+        'orange': '#fdb400',
+      }
+
+      // the template for each attribute in a node's array of item data
+      var itemTempl =
+        $(go.Panel, "Horizontal",
+          $(go.Shape,
+            { desiredSize: new go.Size(15, 15), strokeJoin: "round", strokeWidth: 3, stroke: null, margin: 2 },
+            new go.Binding("figure", "figure"),
+            new go.Binding("fill", "color"),
+            new go.Binding("stroke", "color")),
+          $(go.TextBlock,
+            {
+              stroke: "#333333",
+              font: "bold 14px sans-serif"
+            },
+            new go.Binding("text", "name"))
+        );
+
+      // define the Node template, representing an entity
+      myDiagram.nodeTemplate =
+        $(go.Node, "Auto",  // the whole node panel
+          {
+            selectionAdorned: true,
+            resizable: true,
+            layoutConditions: go.Part.LayoutStandard & ~go.Part.LayoutNodeSized,
+            fromSpot: go.Spot.AllSides,
+            toSpot: go.Spot.AllSides,
+            isShadowed: true,
+            shadowOffset: new go.Point(3, 3),
+            shadowColor: "#C5C1AA"
+          },
+          new go.Binding("location", "location").makeTwoWay(),
+          // whenever the PanelExpanderButton changes the visible property of the "LIST" panel,
+          // clear out any desiredSize set by the ResizingTool.
+          new go.Binding("desiredSize", "visible", function(v) { return new go.Size(NaN, NaN); }).ofObject("LIST"),
+          // define the node's outer shape, which will surround the Table
+          $(go.Shape, "RoundedRectangle",
+            { fill: 'white', stroke: "#eeeeee", strokeWidth: 3 }),
+          $(go.Panel, "Table",
+            { margin: 8, stretch: go.GraphObject.Fill },
+            $(go.RowColumnDefinition, { row: 0, sizing: go.RowColumnDefinition.None }),
+            // the table header
+            $(go.TextBlock,
+              {
+                row: 0, alignment: go.Spot.Center,
+                margin: new go.Margin(0, 24, 0, 2),  // leave room for Button
+                font: "bold 16px sans-serif"
+              },
+              new go.Binding("text", "key")),
+            // the collapse/expand button
+            $("PanelExpanderButton", "LIST",  // the name of the element whose visibility this button toggles
+              { row: 0, alignment: go.Spot.TopRight }),
+            // the list of Panels, each showing an attribute
+            $(go.Panel, "Vertical",
+              {
+                name: "LIST",
+                row: 1,
+                padding: 3,
+                alignment: go.Spot.TopLeft,
+                defaultAlignment: go.Spot.Left,
+                stretch: go.GraphObject.Horizontal,
+                itemTemplate: itemTempl
+              },
+              new go.Binding("itemArray", "items"))
+          )  // end Table Panel
+        );  // end Node
+
+      // define the Link template, representing a relationship
+      myDiagram.linkTemplate =
+        $(go.Link,  // the whole link panel
+          {
+            selectionAdorned: true,
+            layerName: "Foreground",
+            reshapable: true,
+            routing: go.Link.AvoidsNodes,
+            corner: 5,
+            curve: go.Link.JumpOver
+          },
+          $(go.Shape,  // the link shape
+            { stroke: "#303B45", strokeWidth: 2.5 }),
+          $(go.TextBlock,  // the "from" label
+            {
+              textAlign: "center",
+              font: "bold 14px sans-serif",
+              stroke: "#1967B3",
+              segmentIndex: 0,
+              segmentOffset: new go.Point(NaN, NaN),
+              segmentOrientation: go.Link.OrientUpright
+            },
+            new go.Binding("text", "text")),
+          $(go.TextBlock,  // the "to" label
+            {
+              textAlign: "center",
+              font: "bold 14px sans-serif",
+              stroke: "#1967B3",
+              segmentIndex: -1,
+              segmentOffset: new go.Point(NaN, NaN),
+              segmentOrientation: go.Link.OrientUpright
+            },
+            new go.Binding("text", "toText"))
+        );
+
+      // create the model for the E-R diagram
+      var nodeDataArray = [
+        {
+          key: "Products",
+          items: [{ name: "ProductID", iskey: true, figure: "Decision", color: colors.red },
+          { name: "ProductName", iskey: false, figure: "Hexagon", color: colors.blue },
+          { name: "SupplierID", iskey: false, figure: "Decision", color: "purple" },
+          { name: "CategoryID", iskey: false, figure: "Decision", color: "purple" }]
+        },
+        {
+          key: "Suppliers",
+          items: [{ name: "SupplierID", iskey: true, figure: "Decision", color: colors.red },
+          { name: "CompanyName", iskey: false, figure: "Hexagon", color: colors.blue },
+          { name: "ContactName", iskey: false, figure: "Hexagon", color: colors.blue },
+          { name: "Address", iskey: false, figure: "Hexagon", color: colors.blue }]
+        },
+        {
+          key: "Categories",
+          items: [{ name: "CategoryID", iskey: true, figure: "Decision", color: colors.red },
+          { name: "CategoryName", iskey: false, figure: "Hexagon", color: colors.blue },
+          { name: "Description", iskey: false, figure: "Hexagon", color: colors.blue },
+          { name: "Picture", iskey: false, figure: "TriangleUp", color: colors.pink }]
+        },
+        {
+          key: "Order Details",
+          items: [{ name: "OrderID", iskey: true, figure: "Decision", color: colors.red },
+          { name: "ProductID", iskey: true, figure: "Decision", color: colors.red },
+          { name: "UnitPrice", iskey: false, figure: "Circle", color: colors.green },
+          { name: "Quantity", iskey: false, figure: "Circle", color: colors.green },
+          { name: "Discount", iskey: false, figure: "Circle", color: colors.green }]
+        },
+      ];
+      var linkDataArray = [
+        { from: "Products", to: "Suppliers", text: "0..N", toText: "1" },
+        { from: "Products", to: "Categories", text: "0..N", toText: "1" },
+        { from: "Order Details", to: "Products", text: "0..N", toText: "1" }
+      ];
+      myDiagram.model = $(go.GraphLinksModel,
+        {
+          copiesArrays: true,
+          copiesArrayObjects: true,
+          nodeDataArray: nodeDataArray,
+          linkDataArray: linkDataArray
+        });
+    }
+  </script>
 </head>
-<body>
-	<div id="principalEjercicios">
-		<div id="menuEjercicios">
-			<div id="encabezado-menuEjercicios">
-				<img id="imagenback" src="/static/img/imagenback.png">
-				<img id="imagenperfil" class="imgRedonda" src="/static/img/imagenperfil.png">
-				<p id="tituloEjercicio" class="titulo-data">Data</p>
-				<p id="tituloEjercicio" class="titulo-base">Bass</p>
-			</div>
-			<div id="unidadesEjercicios">
-				<p>Temas</p>
-				
-				<div class="unidadesEjerciciosContenedor">
-					
-						
-							<div class="u2" id="0">0</div>
-						
-					
-						
-							<div class="u2" id="1">1</div>
-						
-					
-						
-							<div class="u1" id="2">2</div>
-						
-					
-						
-							<div class="u3">3</div>
-						
-					
-						
-							<div class="u3">4</div>
-						
-					
-						
-							<div class="u3">5</div>
-						
-					
-						
-							<div class="u3">6</div>
-						
-					
-						
-							<div class="u3">7</div>
-						
-					
-						
-							<div class="u3">8</div>
-						
-					
-						
-							<div class="u3">9</div>
-						
-					
-						
-							<div class="u3">10</div>
-						
-					
-				</div>
-				
-				
-			</div>
-			<div id="temasEjercicios">
-				<p>Ejercicios</p>
-				<div id="temasEjerciciosContenedor">
-					
-						
-							
-								<div class="t6" id="ejercicio-4" onclick="getEjercicio(this.id)">4</div>
-							
-						
-					
-				</div>
-			</div>
-		</div>
-
-		<div id="contenidoEjercicios">
-			<div id="encabezado-contenidoEjercicios">
-				<div id="titulo-contenidoEjercicos">
-					
-						<p id="title">Unidad 2. Metodología de diseño de bases de datos</p>
-					
-					<div id="subtitulo-contenidoEjercicios">
-						<p id="calificacion">Calificación:</p>
-						<p>0/0 pts.</p>
-					</div>
-				</div>
-				<div id="descripcion-contenidoEjercicios">
-				
-					
-					<div id="titulo-descripcion-contenidoEjercicios">
-						<p>Descripción de la unidad</p>
-					</div>
-						<p id="description">Conceptos: planeacion, diseño, modelos de negocio, identificacion de entidades, tipos de dato, validacion del modelo,</p>
-					
-				</div>
-			</div>
-			<div id="contenido-contenidoEjercicios">
-<script>
-    $( function() {
-      $( "ul.droptrue" ).sortable({
-        connectWith: "ul"
-      });
-   
-      $( "ul.dropfalse" ).sortable({
-        connectWith: "ul",
-        dropOnEmpty: false
-      });
-   
-      $( "#sortable1, #sortable2, #sortable3" ).disableSelection();
-    } );
-    </script>
-
-<ul id="sortable1" class="droptrue">
-  <li class="ui-state-default">Can be dropped..</li>
-  <li class="ui-state-default">..on an empty list</li>
-  <li class="ui-state-default">Item 3</li>
-  <li class="ui-state-default">Item 4</li>
-  <li class="ui-state-default">Item 5</li>
-</ul>
- 
-<ul id="sortable2" class="dropfalse">
-  <li class="ui-state-highlight">Cannot be dropped..</li>
-  <li class="ui-state-highlight">..on an empty list</li>
-  <li class="ui-state-highlight">Item 3</li>
-  <li class="ui-state-highlight">Item 4</li>
-  <li class="ui-state-highlight">Item 5</li>
-</ul>
- 
-<ul id="sortable3" class="droptrue">
-</ul>
- 
-<br style="clear:both">
- </div>
-		</div>
-	</div>
-
+<body onload="init()">
+<div id="sample">
+  <div id="myDiagramDiv" style="background-color: white; border: solid 1px black; width: 100%; height: 700px"></div>
+  <p>Sample for representing the relationship between various entities.  Try dragging the nodes -- their links will avoid other nodes, by virtue of the <a>Link,AvoidsNodes</a> property assigned to the
+    custom link template's <a>Link.routing</a>. Also note the use of <a href="../intro/buttons.html" target="_blank">Panel Expander Buttons</a> to allow for expandable/collapsible node data.
+  </p>
+  <p>Buttons are defined in <a href="../extensions/Buttons.js">Buttons.js</a>.</p>
+</div>
 </body>
 </html>
