--- a/compilador/css/maestroLista.css
+++ b/compilador/css/maestroLista.css
@@ -189,7 +189,7 @@ li {
 }
 #grupos-contenedor{
     width: 80%;
-    height: 80%;
+    height: 70%;
     
     display: flex;
     overflow: auto;
@@ -199,14 +199,42 @@ li {
     display: flex;
     flex-wrap: wrap;
 }
-#left-top>h3{
+#left-top-top>h3{
     color: white;
     font-weight:500 ;
-    width:80% ;
-    height: 10%;
+    width:90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
 }
-
+#left-top-top{
+    width: 80%;
+    height: 48px;
+    display: flex;
+}
+#left-top-top>img{
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    margin-left: 6px;
+    margin-right: 6px;
+}
+#left-top-top>img:hover{
+   background-color: #777777bb;
+  
+}
+.datos-gen{
+    height: 70px;
+    color: #FFFFFF;
+    font-size: 18px;
+}
+td{
+    text-align: center;
+}
+td>a{
+    color: #7DAEDF;
+}
 #left-bottom{
     width: 100%;
     height: 40%;
@@ -225,6 +253,9 @@ li {
     width: 80%;
     height: 70%;
     background-color: #424556;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .grupo{
     width: 130px;
