--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -18,7 +18,7 @@
 		<div id="menuEjercicios">
 			<div id="encabezado-menuEjercicios">
 				<img id="imagenback" src="{% static 'img/imagenback.png' %}">
-				<img id="imagenperfil" class="imgRedonda" src="{% static 'img/imagenperfil.png' %}">
+				<img id="imagenperfil" class="imgRedonda" src="{% static 'img/perfil.jpg' %}">
 				<p id="tituloEjercicio" class="titulo-data">Data</p>
 				<p id="tituloEjercicio" class="titulo-base">Bass</p>
 			</div>
@@ -42,7 +42,7 @@
 					{% endfor %}
 				</div>
 				{% else %}
-					<p>No hay temas por el momento. Intenta mas tarde o habla con el Profesor.</p>
+					<p>No hay temas por el momento. Intenta más tarde o habla con el profesor.</p>
 				{% endif %}
 				
 			</div>
