--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -191,20 +191,8 @@
                         flex-direction: row;
                         flex-wrap: wrap;
                     }
-                    .unidadesEjerciciosContenedor>a{
-                        text-decoration: none;
-                        height: 30%;
-                        width: 60px;
-                        flex-wrap: wrap;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        border-radius: 4px;
-                        /* margin-left: 2%; */
-                        margin-right: 1%;
-                        margin-top: 10px;
-                    }
-                    /* .unidadesEjerciciosContenedor>div {
+                    
+                    .unidadesEjerciciosContenedor>div {
                         display: block;
                         height: 30%;
                         width: 90px;
@@ -213,39 +201,17 @@
                         align-items: center;
                         font-size: 18px;
                         border-radius: 5px;
-                    } */
+                    }
                     .unidadesEjerciciosContenedor.active > div:last-child {
                         background-color: #FF5A09;
                     }
                     .u1{
                           background-color: #FF5A09;
                           color: white;
-                            text-decoration: none;
-                            height: 80%;
-                            width: 60px;
-                            flex-wrap: wrap;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            border-radius: 4px;
-                            /* margin-left: 2%; */
-                            margin-right: 1%;
-                            margin-top: 10px;
                     }
                     .u2{
                         background-color: white;
-                            text-decoration: none;
-                            height: 80%;
-                            width: 60px;
-                            flex-wrap: wrap;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            background: white;
-                            border-radius: 4px;
-                            /* margin-left: 2%; */
-                            margin-right: 1%;
-                            margin-top: 10px;   
+                       
                     }
 
                     .u2:hover{
@@ -253,19 +219,7 @@
 
                     }
                      .u3{
-                        /* background-color: grey;     */
-                            background-color: white;
-                            text-decoration: none;
-                            height: 24%;
-                            width: 60px;
-                            flex-wrap: wrap;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            border-radius: 4px;
-                            /* margin-left: 2%; */
-                            margin-right: 1%;
-                            margin-top: 22px;     
+                        background-color: grey;                       
                     }
 
                     #temasEjerciciosContenedor{
@@ -281,26 +235,7 @@
                         align-items: center;
                         flex-wrap: wrap;
                     }
-                    #temasEjerciciosContenedor>p{
-                        color:white;
-                        font-size:15px;
-                        text-align:center;
-                    }
-                    #temasEjerciciosContenedor>a{
-                        background-color: white;
-                            text-decoration: none;
-                            height: 30%;
-                            width: 60px;
-                            flex-wrap: wrap;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            background: white;
-                            border-radius: 4px;
-                            /* margin-left: 2%; */
-                            margin-right: 1%;
-                            margin-top: 10px;   
-                    }
+
                     #temasEjerciciosContenedor>div{
                         /*margin-left:10%;*/
                         height: 30%;
@@ -348,7 +283,7 @@
 
         /*---Vista del contenido general----*/
         #contenidoEjercicios{
-            background-color:rgb(51,54,69);
+            /*background-color:green;*/
             display: flex;
             width:100%;
             height: 100%;
@@ -413,7 +348,6 @@
             margin-top: 2%;
             border-radius:10px;
             box-shadow:0px 0px 5px gray;
-            overflow-y: auto;
         }
 
 
